Added --enable-native-access=javafx.graphics option