@@ -122,6 +122,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.pontalti.game2048.adapter.ui.fx.FxUI</mainClass>
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
                 </configuration>
             </plugin>
 
